# LIDAR_mapping_drone

./: .gitignore  AGENTS.md  README.md  current_setup.md
docs/TF_frames/: frames_2026-06-23_19.58.39.gv
src/: run_lidar_mapping_drone.sh  run_lidar_mapping_drone_control.sh
src/lidar_mapping_drone_bringup/: CMakeLists.txt  README.md  package.xml
src/lidar_mapping_drone_bringup/config/: bridge_lidar.yaml
src/lidar_mapping_drone_bringup/launch/: lidar_mapping_drone.launch.py
src/lidar_mapping_drone_control/: CMakeLists.txt  package.xml
src/lidar_mapping_drone_control/config/: flight_controller.yaml  motor_bridge.yaml
src/lidar_mapping_drone_control/launch/: flight_controller.launch.py
src/lidar_mapping_drone_control/lidar_mapping_drone_control/: __init__.py  altitude_controller.py  common.py  flight_controller_node.py  inner_loop_pitch_roll_controller.py  keyboard_control_node.py  motor_mixer.py  outer_loop_xy_position_controller.py  safety_limiter.py  state_estimator.py  yaw_controller.py
src/lidar_mapping_drone_control/scripts/: flight_controller_node  keyboard_control_node
src/lidar_mapping_drone_sim/: CMakeLists.txt  README.md  package.xml
src/lidar_mapping_drone_sim/models/lidar_bot/: model.config  model.sdf
src/lidar_mapping_drone_sim/models/x3_lidar/: model.config  model.sdf
src/lidar_mapping_drone_sim/rviz/: lidar_view.rviz
src/lidar_mapping_drone_sim/worlds/: lidar_robot.world.sdf
tools/: README.md  generate_system_graph.py  run_system_viz.sh
